--- a/app/src/main/res/layout/activity_new_transaction.xml
+++ b/app/src/main/res/layout/activity_new_transaction.xml
@@ -6,9 +6,49 @@
     android:layout_height="match_parent"
     tools:context=".NewTransactionActivity">
 
-    <TextView
+    <!-- Toolbar :: Title : New Transaction -->
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/main_toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="?attr/colorPrimary"
+        android:elevation="4dp"
+        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+        app:title="@string/new_transaction" />
+
+    <android.support.design.widget.TextInputLayout
+        android:id="@+id/new_transaction_edittext_from"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintEnd_toStartOf="@+id/new_transaction_btn_choose_from"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/main_toolbar">
+
+        <android.support.design.widget.TextInputEditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/transaction_activity_from" />
+    </android.support.design.widget.TextInputLayout>
+
+    <Button
+        android:id="@+id/new_transaction_btn_choose_from"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/app_name"/>
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="24dp"
+        style="@style/BtnTheme"
+        android:text="Choose"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/new_transaction_edittext_from"
+        app:layout_constraintTop_toBottomOf="@+id/main_toolbar" />
+
 
 </android.support.constraint.ConstraintLayout>
