--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#f9a825</color>
+    <color name="colorPrimaryDark">#c17900</color>
+    <color name="colorAccent">#ffd95a</color>
+
+    <color name="btn_color">#f57c00</color>
+    <color name="text_input_layout_color">#e65100</color>
 </resources>
