Main Activity with 2 layouts

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -5,19 +5,21 @@
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/text_input_layout_color</item>
+        <item name="colorAccent">@color/colorAccent</item>
     </style>
 
 
     <style name="BtnTheme">
-        <item name="android:background">@color/btn_color</item>
+        <item name="android:background">@android:color/background_light</item>
+        <item name="android:textColor">@color/colorPrimary</item>
     </style>
 
     <style name="TextInputLayoutTheme" parent="@android:style/TextAppearance">
-        <item name="android:textColorHint">@android:color/darker_gray</item>
+        <item name="android:textColorHint">@android:color/background_light</item>
         <item name="android:textSize">20sp</item>
-        <item name="colorControlActivated">@color/text_input_layout_color</item>
-        <item name="colorControlHighlight">@color/text_input_layout_color</item>
+        <item name="android:colorControlNormal">@android:color/background_light</item>
+        <item name="colorControlActivated">@android:color/background_light</item>
+        <item name="colorControlHighlight">@android:color/background_light</item>
     </style>
 
 </resources>
