--- a/app/src/main/res/layout/activity_new_transaction.xml
+++ b/app/src/main/res/layout/activity_new_transaction.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/layout_2"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".NewTransactionActivity">
+    android:background="@color/colorPrimary">
 
     <!-- Toolbar :: Title : New Transaction -->
     <android.support.v7.widget.Toolbar
@@ -91,9 +91,10 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginTop="16dp"
+        android:theme="@style/TextInputLayoutTheme"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textView"
-        app:layout_constraintTop_toBottomOf="@+id/new_transaction_edittext_to">
+        app:layout_constraintTop_toBottomOf="@+id/textInputLayout">
 
         <android.support.design.widget.TextInputEditText
             android:layout_width="match_parent"
@@ -110,10 +111,11 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="24dp"
         android:text="@string/rupee_symbol"
+        android:textColor="@android:color/white"
         android:textSize="28sp"
         app:layout_constraintEnd_toStartOf="@+id/new_transaction_edittext_amount"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/new_transaction_edittext_to" />
+        app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />
 
     <CheckBox
         android:id="@+id/checkBox"
@@ -123,6 +125,8 @@
         android:layout_marginTop="16dp"
         android:layout_weight="1"
         android:text="Need to be returned?"
+        android:buttonTint="@android:color/background_light"
+        android:textColor="@android:color/background_light"
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/radioGroup" />
@@ -145,30 +149,40 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="@string/transaction_activity_radio_wallet"
+            android:buttonTint="@android:color/background_light"
+            android:textColor="@android:color/background_light"
             android:textSize="20sp" />
 
         <RadioButton
             android:id="@+id/new_transaction_radio_account"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:buttonTint="@android:color/background_light"
             android:layout_weight="1"
             android:text="@string/transaction_activity_radio_account"
+            android:textColor="@android:color/background_light"
             android:textSize="20sp" />
 
     </RadioGroup>
 
-    <Button
-        android:id="@+id/button"
+    <android.support.design.widget.TextInputLayout
+        android:id="@+id/textInputLayout"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="24dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginStart="16dp"
-        style="@style/BtnTheme"
-        android:text="Save"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginEnd="8dp"
+        android:theme="@style/TextInputLayoutTheme"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="16dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/new_transaction_edittext_to">
+
+        <android.support.design.widget.TextInputEditText
+            android:id="@+id/new_transaction_edittext_description"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Description" />
+    </android.support.design.widget.TextInputLayout>
 
 
 </android.support.constraint.ConstraintLayout>
