--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#f9a825</color>
-    <color name="colorPrimaryDark">#c17900</color>
-    <color name="colorAccent">#ffd95a</color>
+    <color name="colorPrimary">#2196F3</color>
+    <color name="colorPrimaryDark">#1565C0</color>
+    <color name="colorAccent">#2196F3</color>
 
     <color name="btn_color">#f57c00</color>
     <color name="text_input_layout_color">#e65100</color>
