--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,9 @@
     <color name="colorPrimaryDark">#1565C0</color>
     <color name="colorAccent">#2196F3</color>
 
-    <color name="btn_color">#f57c00</color>
-    <color name="text_input_layout_color">#e65100</color>
+    <color name="green">#4527A0</color>
+    <color name="red">#DD2C00</color>
+
+    <color name="needback">#FFAB91</color>
+    <color name="noneed">#C5E1A5</color>
 </resources>
