--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,7 +4,7 @@
     <color name="colorPrimaryDark">#1565C0</color>
     <color name="colorAccent">#2196F3</color>
 
-    <color name="green">#4527A0</color>
+    <color name="purple">#4527A0</color>
     <color name="red">#DD2C00</color>
 
     <color name="needback">#FFAB91</color>
