--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/layout_main"
     android:layout_width="match_parent"
-    android:background="@color/noneed"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
@@ -24,9 +23,120 @@
 
     <android.support.constraint.ConstraintLayout
         android:id="@+id/layout_1"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/main_toolbar">
 
+
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="20dp"
+            android:text="Pending Transactions"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/cardView_wallet" />
+
+        <android.support.v7.widget.RecyclerView
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_marginTop="16dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView2"
+            app:layout_constraintVertical_bias="1.0" />
+
+        <TextView
+            android:id="@+id/tv_view_all"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="16dp"
+            android:paddingTop="8dp"
+            android:text="View All"
+            android:textColor="@color/purple"
+            android:textSize="18sp"
+            app:layout_constraintBottom_toBottomOf="@+id/textView2"
+            app:layout_constraintEnd_toEndOf="parent" />
+
+        <android.support.v7.widget.CardView
+            android:id="@+id/cardView_wallet"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_margin="8dp"
+            android:layout_marginEnd="81dp"
+            app:layout_constraintEnd_toStartOf="@+id/cardView_Account"
+            app:layout_constraintHorizontal_weight="1"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:padding="16dp">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:text="@string/transaction_activity_radio_wallet"
+                    android:textColor="@android:color/black"
+                    android:textSize="28sp"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:text="@string/rupee_symbol"
+                    android:textColor="@color/purple"
+                    android:textSize="24sp" />
+            </LinearLayout>
+        </android.support.v7.widget.CardView>
+
+        <android.support.v7.widget.CardView
+            android:id="@+id/cardView_Account"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_margin="8dp"
+            android:layout_marginStart="8dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_weight="1"
+            app:layout_constraintStart_toEndOf="@+id/cardView_wallet"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:padding="16dp">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:text="@string/transaction_activity_radio_account"
+                    android:textColor="@android:color/black"
+                    android:textSize="28sp"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:text="@string/rupee_symbol"
+                    android:textColor="@color/purple"
+                    android:textSize="24sp" />
+
+            </LinearLayout>
+        </android.support.v7.widget.CardView>
     </android.support.constraint.ConstraintLayout>
 
     <android.support.design.widget.FloatingActionButton
@@ -48,7 +158,7 @@
         android:layout_height="56dp"
         android:layout_marginBottom="32dp"
         android:layout_marginEnd="32dp"
-        android:backgroundTint="@color/green"
+        android:backgroundTint="@color/purple"
         android:clickable="true"
         android:focusable="true"
         android:src="@drawable/baseline_done_24"
@@ -63,8 +173,8 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:background="@color/colorPrimary"
-        android:visibility="gone"
         android:focusableInTouchMode="true"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -84,10 +194,12 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
-            <android.support.design.widget.TextInputEditText
+            <com.example.parth.transactionmanager.TextInputAutoCompleteTextView
+                android:id="@+id/new_transaction_edittext_from_child"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/transaction_activity_from"
+                android:imeOptions="actionNext"
                 android:inputType="textCapWords"
                 android:textColor="@android:color/background_light" />
         </android.support.design.widget.TextInputLayout>
@@ -118,10 +230,12 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/new_transaction_edittext_from">
 
-            <android.support.design.widget.TextInputEditText
+            <com.example.parth.transactionmanager.TextInputAutoCompleteTextView
+                android:id="@+id/new_transaction_edittext_to_child"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/transaction_activity_to"
+                android:imeOptions="actionNext"
                 android:inputType="textCapWords"
                 android:textColor="@android:color/background_light" />
         </android.support.design.widget.TextInputLayout>
@@ -140,6 +254,28 @@
             app:layout_constraintTop_toBottomOf="@+id/new_transaction_btn_choose_from" />
 
         <android.support.design.widget.TextInputLayout
+            android:id="@+id/new_transaction_edittext_description"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="16dp"
+            android:theme="@style/TextInputLayoutTheme"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/new_transaction_edittext_to">
+
+            <com.example.parth.transactionmanager.TextInputAutoCompleteTextView
+                android:id="@+id/new_transaction_edittext_description_child"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Description"
+                android:imeOptions="actionNext"
+                android:inputType="textCapSentences"
+                android:textColor="@android:color/background_light" />
+        </android.support.design.widget.TextInputLayout>
+
+        <android.support.design.widget.TextInputLayout
             android:id="@+id/new_transaction_edittext_amount"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -148,12 +284,14 @@
             android:theme="@style/TextInputLayoutTheme"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/textView"
-            app:layout_constraintTop_toBottomOf="@+id/textInputLayout">
+            app:layout_constraintTop_toBottomOf="@+id/new_transaction_edittext_description">
 
-            <android.support.design.widget.TextInputEditText
+            <com.example.parth.transactionmanager.TextInputAutoCompleteTextView
+                android:id="@+id/new_transaction_edittext_amount_child"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/transaction_activity_amount"
+                android:imeOptions="actionNext"
                 android:inputType="number|numberDecimal"
                 android:textColor="@android:color/background_light" />
         </android.support.design.widget.TextInputLayout>
@@ -170,7 +308,7 @@
             android:textSize="28sp"
             app:layout_constraintEnd_toStartOf="@+id/new_transaction_edittext_amount"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />
+            app:layout_constraintTop_toBottomOf="@+id/new_transaction_edittext_description" />
 
         <CheckBox
             android:id="@+id/checkBox"
@@ -180,7 +318,7 @@
             android:layout_marginTop="24dp"
             android:layout_weight="1"
             android:buttonTint="@android:color/background_light"
-            android:text="Need to be returned?"
+            android:text="@string/need_to_be_returned"
             android:textColor="@android:color/background_light"
             android:textSize="20sp"
             app:layout_constraintStart_toStartOf="parent"
@@ -219,26 +357,6 @@
                 android:textSize="20sp" />
 
         </RadioGroup>
-
-        <android.support.design.widget.TextInputLayout
-            android:id="@+id/textInputLayout"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="16dp"
-            android:theme="@style/TextInputLayoutTheme"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/new_transaction_edittext_to">
-
-            <android.support.design.widget.TextInputEditText
-                android:id="@+id/new_transaction_edittext_description"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="Description"
-                android:textColor="@android:color/background_light" />
-        </android.support.design.widget.TextInputLayout>
 
 
     </android.support.constraint.ConstraintLayout>
