--- a/app/src/main/res/layout/activity_all_entries.xml
+++ b/app/src/main/res/layout/activity_all_entries.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    style="@style/AppTheme"
     android:layout_height="match_parent"
     tools:context=".AllEntriesActivity">
 
@@ -12,7 +13,7 @@
         android:layout_height="0dp"
         android:background="?attr/colorPrimary"
         android:elevation="4dp"
-        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
+        android:theme="@style/ToolbarStyle"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
